--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,5 +2,5 @@ parameters:
     phpexcel.class:  Liuggio\ExcelBundle\Factory
 
 services:
-    phpexcel:
-      class: '%phpexcel.class%'
+  Liuggio\ExcelBundle\Factory:
+      public: true
